<resources>
    <string name="app_name">Medgency</string>
    <string name="app_desc">Medgency memberikan kemudahan membuat antrian di rumah sakit, klinik atau dokter favorit kalian.</string>
    <string name="NamaDepan">Nama Depan</string>
    <string name="NamaBelakang">Nama Belakang</string>
    <string name="JenisKelamin">Jenis Kelamin</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="BlmDiSet">Belum di set</string>
    <string name="HospitalDesc">500+ Rumah\nsakit tersedia</string>
    <string name="DoctorDesc">500+ Dokter\ntersedia</string>
    <string name="ClinicDesc">500+ Klinik\ntersedia</string>
    <string name="AmbulanceDesc">24 jam\nambulans siaga</string>
    <string name="Home">Home</string>
    <string name="JadwalSaya">Jadwal Saya</string>
    <string name="Profil">Profil</string>
    <string name="PasienLama">Pasien Lama</string>
    <string name="PasienBaru">Pasien Baru</string>
    <string name="NomorRekamMedis">Nomor Rekam Medis</string>
    <string name="RumahSakit">Rumah Sakit</string>

    <!-- Hint Edit Text-->
    <string name="MasukanNamaLengkapSesuaiKTP"><font size="15">Masukan nama lengkap sesuai KTP</font></string>
    <string name="MasukanNIK"><font size="15">Masukan Nomor Induk Kependudukan</font></string>
    <string name="MasukanTTL"><font size="15">DD-MM-YY</font></string>
    <string name="MasukanAlamatSesuaiKTP"><font size="15">Masukan alamat sesuai KTP</font></string>
    <string name="MasukanNomorRekamMedis"><font size="15">Contoh : 09765644677</font></string>


    <string name="kontak">Kontak</string>
    <string name="igd">IGD</string>
    <string name="informasi">Informasi</string>
    <string name="Email">Email</string>

    <!--Digunakan di JAVA-->
    <string name="NamaRS">NamaRS</string>
    <string name="NamaDokter">NamaDokter</string>
    <string name="JenisLayanan">JenisLayanan</string>
    <string name="Tampungan">Tampungan</string>
    <string name="PenyediaLayanan">PenyediaLayanan</string>
    <string name="WaktuBerobat">WaktuBerobat</string>
    <string name="Tanggal">Tanggal</string>
    <string name="Dokter">Dokter</string>
    <string name="Klinik">Klinik</string>
    <string name="Ambulans">Ambulans</string>
    <string name="Layanan">Layanan</string>
    <string name="IdTicket">IdTicket</string>
    <string name="DokterPraktek">Dokter Praktek</string>
    <string name="TanggalLahirPasien">TanggalLahirPasien</string>
    <string name="NamaPasien">NamaPasien</string>
    <string name="TTLPasien">TTLPasien</string>
    <string name="AlamatPasien">AlamatPasien</string>
    <string name="NIKPasien">NIKPasien</string>
    <string name="TelahMemilihTanggal">TelahMemilihTanggal</string>
    <string name="TelahMemilihKelompokLayanan">Telah Memilih Kelompok Layanan</string>
    <string name="LayananRS">LayananRS</string>
    <string name="Akun">Akun</string>
    <string name="TelahMemilihTanggalUntukDokterRSFragment">TelahMemilihTanggalUntukDokterRSFragment</string>
    <string name="Kelompok">Kelompok</string>
    <string name="under_construction">Under Construction</string>
</resources>
