<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/TVNama"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="Nama"
        android:textSize="15sp"
        android:textColor="@color/blackBold"
        android:lineHeight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/ETNama"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:paddingLeft="12dp"
        android:hint="@string/MasukanNamaLengkapSesuaiKTP"
        android:textColorHint="#CACCCF"
        android:background="@drawable/bg_jenis_pasien"
        app:layout_constraintTop_toBottomOf="@+id/TVNama" />

    <TextView
        android:id="@+id/TVPeringatanNama"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="Format Nama Salah"
        android:textColor="#F44336"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/ETNama"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/TVNIK"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="NIK"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:textColor="@color/blackBold"
        android:lineHeight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ETNama"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/ETNIK"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:paddingLeft="12dp"
        android:hint="@string/MasukanNIK"
        android:textColorHint="#CACCCF"
        android:background="@drawable/bg_jenis_pasien"
        app:layout_constraintTop_toBottomOf="@+id/TVNIK" />

    <TextView
        android:id="@+id/TVPeringatanNIK"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="Format NIK Salah"
        android:textColor="#F44336"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/ETNIK"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/TVTL"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="Tempat Tanggal Lahir"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:textColor="@color/blackBold"
        android:lineHeight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ETNIK"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/ETTTL"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:paddingLeft="12dp"
        android:hint="@string/MasukanTTL"
        android:textColorHint="#CACCCF"
        android:background="@drawable/bg_jenis_pasien"
        app:layout_constraintTop_toBottomOf="@+id/TVTL" />

    <TextView
        android:id="@+id/TVPeringatanTTL"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="Masukan TTL"
        android:textColor="#F44336"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/ETTTL"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/TVAlamat"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="Alamat"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:textColor="@color/blackBold"
        android:lineHeight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ETTTL"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/ETAlamat"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:paddingLeft="12dp"
        android:hint="@string/MasukanAlamatSesuaiKTP"
        android:textColorHint="#CACCCF"
        android:background="@drawable/bg_jenis_pasien"
        app:layout_constraintTop_toBottomOf="@+id/TVAlamat" />

    <TextView
        android:id="@+id/TVPeringatanAlamat"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="Masukan Alamat"
        android:textColor="#F44336"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/ETAlamat"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <Button
        android:id="@+id/BtnGoToPilihJadwal"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="26dp"
        android:text = "Selanjutnya"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:background="@drawable/clikable_button_bg"
        app:layout_constraintTop_toBottomOf="@id/ETAlamat" />

</android.support.constraint.ConstraintLayout>