<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollViewHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="80dp">
            <android.support.v7.widget.Toolbar
                android:id="@+id/ToolbarHome"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:id="@+id/toolbar_text"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/blackBold"
                    android:gravity="center"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
            </android.support.v7.widget.Toolbar>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ToolbarHome" />

            <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                android:id="@+id/dots_indicator"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                app:dotsColor="@color/ActiveDotIndicator"
                app:dotsStrokeColor="@color/NonActiveDotIndicator"
                app:dotsCornerRadius="8dp"
                app:dotsSize="5dp"
                app:dotsSpacing="4dp"
                app:dotsStrokeWidth="2dp"
                app:layout_constraintTop_toBottomOf="@+id/viewPager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/LLHomeFirstRow"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@+id/dots_indicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <android.support.v7.widget.CardView
                    android:id="@+id/CVRumahSakit"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="20dp"
                    android:elevation="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="8dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="11dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="6dp"
                            android:src="@drawable/logo_rs"/>

                        <TextView
                            android:id="@+id/TVRumahSakit"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="20dp"
                            android:lineHeight="25dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="4.02dp"
                            android:text="Rumah Sakit"
                            android:letterSpacing="0.015"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:lineHeight="18dp"
                            android:textSize="13dp"
                            android:layout_below="@+id/TVRumahSakit"
                            android:text="@string/HospitalDesc"
                            android:letterSpacing="0.015"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/CVKlinik"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:elevation="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="8dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="11dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="6dp"
                            android:src="@drawable/logo_klinik"/>

                        <TextView
                            android:id="@+id/TVKlinik"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="20dp"
                            android:lineHeight="25dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="4.02dp"
                            android:text="Klinik"
                            android:letterSpacing="0.015"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:lineHeight="18dp"
                            android:textSize="13dp"
                            android:layout_below="@+id/TVKlinik"
                            android:text="@string/ClinicDesc"
                            android:letterSpacing="0.015"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LLHomeSecondRow"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@+id/LLHomeFirstRow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <android.support.v7.widget.CardView
                    android:id="@+id/CVDokter"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="28dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="8dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="11dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="6dp"
                            android:src="@drawable/logo_stetoschope"/>

                        <TextView
                            android:id="@+id/TVDokter"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="20dp"
                            android:lineHeight="25dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="4.02dp"
                            android:text="Dokter"
                            android:letterSpacing="0.015"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:lineHeight="18dp"
                            android:textSize="13dp"
                            android:layout_below="@+id/TVDokter"
                            android:text="@string/DoctorDesc"
                            android:letterSpacing="0.015"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/CVAmbulans"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginBottom="28dp"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="8dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="11dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="6dp"
                            android:src="@drawable/logo_ambulans"/>

                        <TextView
                            android:id="@+id/TVAmbulans"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="20dp"
                            android:lineHeight="25dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="4.02dp"
                            android:text="Ambulans"
                            android:letterSpacing="0.015"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:lineHeight="18dp"
                            android:textSize="13dp"
                            android:layout_below="@+id/TVAmbulans"
                            android:text="24 jam\nambulans siaga"
                            android:letterSpacing="0.015"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/TVBacaanMenarikHome"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/LLHomeSecondRow"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Bacaan menarik"
                android:textSize="18sp"
                android:letterSpacing="0.015"
                android:lineHeight="25dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/TVLihatSemuaHome"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:textColor="@color/blue"
                android:layout_marginEnd="20dp"
                android:text="Lihat semua"
                android:lineHeight="19dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/LLHomeSecondRow"
                app:layout_constraintEnd_toEndOf="parent"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/RecyclerViewArticleHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@+id/TVBacaanMenarikHome">

            </android.support.v7.widget.RecyclerView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>